objects/Contract.object
<CustomObject>
  <fields>
        <fullName>Billing_Cycle__c</fullName>
        <description>#165471388</description>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Progress Billing</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
                <value>
                    <fullName>Order Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Bonds_Required_Other__c</fullName>
        <description>#165471388</description>
        <label>Bonds Required (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Bonds_Required__c</fullName>
        <description>#165471388</description>
        <label>Bonds Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Payment &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Payment Only</fullName>
                </value>
                <value>
                    <fullName>Performance Only</fullName>
                </value>
                <value>
                    <fullName>Maintenance Bond</fullName>
                </value>
                <value>
                    <fullName>Easement Bond</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Builder_s_Risk_Ins_Required__c</fullName>
        <description>#165471388</description>
        <label>Builder's Risk Ins. Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
  <fields>
        <fullName>Certified_Payroll_Reports_Required__c</fullName>
        <description>#165471388</description>
        <label>Certified Payroll Reports Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
  <fields>
        <fullName>Change_Order_Markup_Other__c</fullName>
        <description>#165471388</description>
        <label>Change Order Markup % (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Change_Order_Markup__c</fullName>
        <description>#165471388</description>
        <label>Change Order Markup %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Contract_Value__c</fullName>
        <description>#165471388</description>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
  <fields>
        <fullName>Credit_Check_Completion__c</fullName>
        <description>#165471388</description>
        <label>Credit Check Completion Date</label>
        <type>Date</type>
    </fields>
  <fields>
        <fullName>Insurance_Certificate_Obtained__c</fullName>
        <description>#165471388</description>
        <label>Insurance Certificate Obtained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
  <fields>
        <fullName>MBE_SBE_WBE_Reports_Required__c</fullName>
        <description>#165471388</description>
        <label>MBE/SBE/WBE Reports Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
  <fields>
        <fullName>O_M_Contract__c</fullName>
        <description>#165471388</description>
        <label>O&amp;M Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Included in EPC</fullName>
                </value>
                <value>
                    <fullName>No O&amp;M Contract</fullName>
                </value>
                <value>
                    <fullName>Separate Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Old_Sys_ContractNumber__c</fullName>
        <description>This field is used to capture the Old Contract number from System</description>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>#165471388</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
  <fields>
        <fullName>Payment_Terms_Other__c</fullName>
        <description>#165471388</description>
        <label>Payment Terms (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>#165471388</description>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 7</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 20</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>EOM</fullName>
                </value>
                <value>
                    <fullName>PrePayment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Penalty_or_Liquidated_Damage_Risk__c</fullName>
        <description>#165471388</description>
        <label>Penalty or Liquidated Damage Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
  <fields>
        <fullName>Prevailing_Wage_Required__c</fullName>
        <description>#165471388</description>
        <label>Prevailing Wage Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
  <fields>
        <fullName>Project_Completion_Date__c</fullName>
        <description>#165471388</description>
        <formula>Opportunity__r.Commercial_Operation_Date__c</formula>
        <label>Project Completion Date</label>
        <type>Date</type>
    </fields>
  <fields>
        <fullName>Retention_Withholding_Other__c</fullName>
        <description>#165471388</description>
        <label>Retention Withholding (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Retention_Withholding__c</fullName>
        <description>#165471388</description>
        <label>Retention Withholding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>9%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <recordTypes>
        <fullName>NA_Commercial_Project</fullName>
        <active>true</active>
        <description>NA Commercial Contracts (#165471388)</description>
        <label>NA Commercial Project</label>
    </recordTypes>
  <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <description>Partner Contracts</description>
        <label>Partner</label>
    </recordTypes>
  <recordTypes>
        <fullName>Standard_Contract_Type</fullName>
        <active>true</active>
        <label>Standard Contract Type</label>
    </recordTypes>
  <validationRules>
        <fullName>Bonds_Required_Other_Required</fullName>
        <active>true</active>
        <description>#165471388 - field required when Bonds Required is 'Other'</description>
        <errorConditionFormula>AND (
  NOT($User.ByPassValidation__c),
  RecordType.DeveloperName = 'NA_Commercial_Project',
  ISPICKVAL( Bonds_Required__c , 'Other'),
  ISBLANK( Bonds_Required_Other__c ) 
)</errorConditionFormula>
        <errorDisplayField>Bonds_Required_Other__c</errorDisplayField>
        <errorMessage>Bonds Required (Other) is required</errorMessage>
    </validationRules>
  <validationRules>
        <fullName>Change_Order_Markup_Required</fullName>
        <active>true</active>
        <description>#165471388 - field required when Change Order Markup is 'Other'</description>
        <errorConditionFormula>AND (
  NOT($User.ByPassValidation__c),
  RecordType.DeveloperName = 'NA_Commercial_Project',
  ISPICKVAL( Change_Order_Markup__c , 'Other'),
  ISBLANK( Change_Order_Markup_Other__c ) 
)</errorConditionFormula>
        <errorDisplayField>Change_Order_Markup_Other__c</errorDisplayField>
        <errorMessage>Change Order Markup % (Other) is required</errorMessage>
    </validationRules>
  <validationRules>
        <fullName>Payment_Terms_Other_Required</fullName>
        <active>true</active>
        <description>#165471388 - field required when Payment Terms is 'Other'</description>
        <errorConditionFormula>AND (
  NOT($User.ByPassValidation__c),
  RecordType.DeveloperName = 'NA_Commercial_Project',
  ISPICKVAL( Payment_Terms__c , 'Other'),
  ISBLANK( Payment_Terms_Other__c ) 
)</errorConditionFormula>
        <errorDisplayField>Payment_Terms_Other__c</errorDisplayField>
        <errorMessage>Payment Terms (Other) is required</errorMessage>
    </validationRules>
  <validationRules>
        <fullName>Retention_Withholding_Other_Required</fullName>
        <active>true</active>
        <description>#165471388 - field required when Retention Withholding is 'Other'</description>
        <errorConditionFormula>AND (
  NOT($User.ByPassValidation__c),
  RecordType.DeveloperName = 'NA_Commercial_Project',
  ISPICKVAL(Retention_Withholding__c, 'Other'),
  ISBLANK( Retention_Withholding_Other__c ) 
)</errorConditionFormula>
        <errorDisplayField>Retention_Withholding_Other__c</errorDisplayField>
        <errorMessage>Retention Withholding (Other) is required</errorMessage>
    </validationRules>
</CustomObject>